refactor: update transloco directive to use prefix instead of read

--- a/src/app/modules/collection/binder/binder.component.html
+++ b/src/app/modules/collection/binder/binder.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'collection'">
+<ng-container *transloco="let t; prefix: 'collection'">
   @if(!isPublic){
   <nav class="mt-4" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
     <ol class="breadcrumb">
