--- a/src/app/modules/collection/collection-cards-list/collection-cards-list.component.html
+++ b/src/app/modules/collection/collection-cards-list/collection-cards-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'collection'">
+<ng-container *transloco="let t; prefix: 'collection'">
   @if(groupBy === null && multiSelect()){
   <hr class="my-3 text-secondary">
   <div class="px-2">
