--- a/src/app/modules/collection/collection/collection.component.html
+++ b/src/app/modules/collection/collection/collection.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'collection'">
+<ng-container *transloco="let t; prefix: 'collection'">
   <h1 class="my-3">{{ t('title') }}</h1>
   <div class="d-flex justify-content-between mb-3">
     <div class="d-flex flex-wrap gap-2">
