--- a/src/app/modules/collection/preconstructed-deck-modal/preconstructed-deck-modal.component.html
+++ b/src/app/modules/collection/preconstructed-deck-modal/preconstructed-deck-modal.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'collection'">
+<ng-container *transloco="let t; prefix: 'collection'">
   <div class="modal-header">
     <h4 class="modal-title">{{ t('add_preconstructed_deck') }}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="onCancel()"></button>
