--- a/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
+++ b/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'crypt_builder_filter'">
+<ng-container *transloco="let t; prefix: 'crypt_builder_filter'">
   @if ( limitedFormat !==undefined) {
   <div class="row g-1 mb-2 items-center">
     <div class="form-check form-switch form-check-inline">
