--- a/src/app/modules/deck-builder/import-amaranth/import-amaranth.component.html
+++ b/src/app/modules/deck-builder/import-amaranth/import-amaranth.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'import_amaranth'">
+<ng-container *transloco="let t; prefix: 'import_amaranth'">
   <div class="modal-header">
     <h4 class="modal-title">{{ t('title') }}</h4>
     <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
