--- a/src/app/modules/deck-builder/limited-format/limited-format-modal.component.html
+++ b/src/app/modules/deck-builder/limited-format/limited-format-modal.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'limited_format'">
+<ng-container *transloco="let t; prefix: 'limited_format'">
   <div class="modal-header">
     <h4 class="modal-title">{{ t('title') }}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="onCancel()"></button>
