--- a/src/app/modules/deck-shared/print-proxy-modal/print-proxy-modal.component.html
+++ b/src/app/modules/deck-shared/print-proxy-modal/print-proxy-modal.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'print_proxy'">
+<ng-container *transloco="let t; prefix: 'print_proxy'">
   <div class="modal-header">
     <h4 class="modal-title d-flex align-items-center">
       {{ t('title') }}
