--- a/src/app/modules/deck-shared/print-proxy/print-proxy.component.html
+++ b/src/app/modules/deck-shared/print-proxy/print-proxy.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'print_proxy'">
+<ng-container *transloco="let t; prefix: 'print_proxy'">
   <div class="row">
     <ul class="col-12 col-sm-12 col-md-12 col-lg-6 p-1 list-group">
       <li class="list-group-item list-group-item-primary">
