--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -4,7 +4,7 @@
   <div style="height: 100vw"></div>
 </div>
 }
-<ng-container *transloco="let t; read: 'deck'">
+<ng-container *transloco="let t; prefix: 'deck'">
   @if ((deck$ | async)!; as deck) {
   <main class="container-fluid bg-light1 col-12 col-sm-12 col-md-12 col-lg-12 col-xl-11" role="main">
     <div class="row">
