--- a/src/app/modules/decks/decks.component.html
+++ b/src/app/modules/decks/decks.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'decks'">
+<ng-container *transloco="let t; prefix: 'decks'">
   <div id="container" class="h-100">
     <header class="border-bottom mb-3 p-2 sticky-top bg-light">
       <form [formGroup]="mainForm" class="d-flex flex-row align-items-center">
