--- a/src/app/modules/decks/filter/card-filter/card-filter.component.html
+++ b/src/app/modules/decks/filter/card-filter/card-filter.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'filters'">
+<ng-container *transloco="let t; prefix: 'filters'">
   <ng-template #cryptTemplate let-r="result" let-t="term">
     <i class="vtes" [class]="r['clanIcon']"></i>
     @if(r.adv){
