--- a/src/app/modules/decks/filter/deck-filters.component.html
+++ b/src/app/modules/decks/filter/deck-filters.component.html
@@ -1,4 +1,4 @@
-<div class="mt-2" *transloco="let t; read: 'filters'">
+<div class="mt-2" *transloco="let t; prefix: 'filters'">
   <div class="d-grid gap-2 mb-3">
     <button type="button" class="btn btn-danger" (click)="reset()">
       {{ t('clear_filters') }}
