--- a/src/app/modules/reset-password/reset-password.component.html
+++ b/src/app/modules/reset-password/reset-password.component.html
@@ -1,65 +1,65 @@
-<div class="container reset-password py-5" style="height: 30vw" *transloco="let t; read: 'reset_password'">
+<div class="container reset-password py-5" style="height: 30vw" *transloco="let t; prefix: 'reset_password'">
   <h1>{{ t('reset_password') }}</h1>
   <form [formGroup]="resetPasswordForm" (ngSubmit)="onResetPasswordSubmit()">
 
     <div class="form-floating mb-3">
       <input type="password" class="form-control rounded-3" id="floatingPassword" [placeholder]="t('password')"
         formControlName="password" autocomplete="new-password">
-        <label for="floatingPassword">{{ t('password') }}</label>
-        @if (password?.invalid && (password?.dirty || password?.touched)) {
-          <div>
-            @if (password?.errors?.['required']) {
-              <div class="invalid-feedback d-block">
-                <i class="bi bi-x-circle-fill"></i>{{ 'shared.field_required' | transloco:{ field: t('password') } }}
-              </div>
-            }
-            @if (password?.hasError('hasNumber')) {
-              <div class="invalid-feedback d-block">
-                <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_one_number' | transloco }}
-              </div>
-            }
-            @if (password?.hasError('minlength')) {
-              <div class="invalid-feedback d-block">
-                <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_8_characters' | transloco }}
-              </div>
-            }
-          </div>
+      <label for="floatingPassword">{{ t('password') }}</label>
+      @if (password?.invalid && (password?.dirty || password?.touched)) {
+      <div>
+        @if (password?.errors?.['required']) {
+        <div class="invalid-feedback d-block">
+          <i class="bi bi-x-circle-fill"></i>{{ 'shared.field_required' | transloco:{ field: t('password') } }}
+        </div>
+        }
+        @if (password?.hasError('hasNumber')) {
+        <div class="invalid-feedback d-block">
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_one_number' | transloco }}
+        </div>
+        }
+        @if (password?.hasError('minlength')) {
+        <div class="invalid-feedback d-block">
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_8_characters' | transloco }}
+        </div>
         }
       </div>
-      <div class="form-floating mb-3">
-        <input type="password" class="form-control rounded-3" id="floatingConfirmPassword" [placeholder]="t('password')"
-          formControlName="confirmPassword" autocomplete="new-password">
-          <label for="floatingPassword">{{ t('confirm_password') }}</label>
-          @if (confirmPassword?.invalid && (confirmPassword?.dirty || confirmPassword?.touched)) {
-            <div>
-              @if (confirmPassword?.errors?.['required']) {
-                <div class="invalid-feedback d-block">
-                  <i class="bi bi-x-circle-fill"></i> {{ 'shared.field_required' | transloco:{ field: t('confirm_password') } }}
-                </div>
-              }
-              @if (confirmPassword?.hasError('hasNumber')) {
-                <div class="invalid-feedback d-block">
-                  <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_one_number' | transloco }}
-                </div>
-              }
-              @if (confirmPassword?.hasError('minlength')) {
-                <div class="invalid-feedback d-block">
-                  <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_8_characters' | transloco }}
-                </div>
-              }
-              @if (confirmPassword?.hasError('noPasswordMatch')) {
-                <div class="invalid-feedback d-block">
-                  <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_match' | transloco }}
-                </div>
-              }
-            </div>
-          }
-        </div>
-
-        <!-- Submit button -->
-        <button type="submit" class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" [disabled]="resetPasswordForm.invalid">
-          {{ t('reset_password') }}
-        </button>
-
-      </form>
+      }
     </div>
+    <div class="form-floating mb-3">
+      <input type="password" class="form-control rounded-3" id="floatingConfirmPassword" [placeholder]="t('password')"
+        formControlName="confirmPassword" autocomplete="new-password">
+      <label for="floatingPassword">{{ t('confirm_password') }}</label>
+      @if (confirmPassword?.invalid && (confirmPassword?.dirty || confirmPassword?.touched)) {
+      <div>
+        @if (confirmPassword?.errors?.['required']) {
+        <div class="invalid-feedback d-block">
+          <i class="bi bi-x-circle-fill"></i> {{ 'shared.field_required' | transloco:{ field: t('confirm_password') } }}
+        </div>
+        }
+        @if (confirmPassword?.hasError('hasNumber')) {
+        <div class="invalid-feedback d-block">
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_one_number' | transloco }}
+        </div>
+        }
+        @if (confirmPassword?.hasError('minlength')) {
+        <div class="invalid-feedback d-block">
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_8_characters' | transloco }}
+        </div>
+        }
+        @if (confirmPassword?.hasError('noPasswordMatch')) {
+        <div class="invalid-feedback d-block">
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_match' | transloco }}
+        </div>
+        }
+      </div>
+      }
+    </div>
+
+    <!-- Submit button -->
+    <button type="submit" class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" [disabled]="resetPasswordForm.invalid">
+      {{ t('reset_password') }}
+    </button>
+
+  </form>
+</div>
