--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-primary text-center text-white" *transloco="let t; read: 'footer'">
+<footer class="bg-primary text-center text-white" *transloco="let t; prefix: 'footer'">
   <div class="container p-4">
     <section>
       <div class="row">
