--- a/src/app/shared/components/notification-list/notification-list.component.html
+++ b/src/app/shared/components/notification-list/notification-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'notification'">
+<ng-container *transloco="let t; prefix: 'notification'">
   <div class="offcanvas-header">
     <h4 class="offcanvas-title" id="offcanvas-basic-title">{{ t('title') }}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="offcanvas.dismiss()"></button>
