--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
-<div class="text-center my-5 not-found" *transloco="let t; read: 'page_not_found'">
+<div class="text-center my-5 not-found" *transloco="let t; prefix: 'page_not_found'">
   <h1 class="display-1 fw-bold">404</h1>
   <p class="fs-3"> <span class="text-danger">{{ t('danger_text') }}</span> {{ t('page_not_found') }}</p>
   <p class="lead">
