--- a/src/app/modules/changelog/changelog.component.html
+++ b/src/app/modules/changelog/changelog.component.html
@@ -1,4 +1,4 @@
-<div class="container" *transloco="let t; read: 'changelog'">
+<div class="container" *transloco="let t; prefix: 'changelog'">
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-12">
       <div class="mt-4">
