--- a/src/app/modules/collection/binder-list/binder-list.component.html
+++ b/src/app/modules/collection/binder-list/binder-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'collection'">
+<ng-container *transloco="let t; prefix: 'collection'">
   <nav class="mt-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a routerLink="/collection">{{ t('title') }}</a></li>
