--- a/src/app/modules/collection/card-bulk-edit-modal/card-bulk-edit-modal.component.html
+++ b/src/app/modules/collection/card-bulk-edit-modal/card-bulk-edit-modal.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'collection'">
+<ng-container *transloco="let t; prefix: 'collection'">
   <div class="modal-header">
     <h4 class="modal-title">{{ t('bulk_edit_title') }}</h4>
     <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
