--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row p-3" *transloco="let t; read: 'comments'">
+<div class="d-flex flex-row p-3" *transloco="let t; prefix: 'comments'">
   <img [src]="comment.profileImage" width="40" height="40" class="rounded-circle me-3" [alt]="comment.fullName"
     onerror="this.src='/assets/img/default_user.png'">
   <div class="w-100">
