--- a/src/app/modules/deck-shared/library-list/library-list.component.html
+++ b/src/app/modules/deck-shared/library-list/library-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *transloco="let t; read: 'deck_shared'">
+<div class="row" *transloco="let t; prefix: 'deck_shared'">
   @if(displayMode === 'grid') {
   <div class="row m-2 g-2 justify-content-center">
     @for (libraryType of libraryTypes; track trackByIndexFn($index, libraryType)) {
