--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; read: 'home'">
+<ng-container *transloco="let t; prefix: 'home'">
   @if (showChangelogAlert && changelogAlert) {
   <div class="hero-alert alert alert-info alert-dismissible fade show mb-0 rounded-0 border-0" role="alert">
     <div class="container">
