--- a/src/app/modules/statistics/statistics.component.html
+++ b/src/app/modules/statistics/statistics.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column justify-content-center align-items-center mt-4" *transloco="let t; read: 'statistics'">
+<div class="d-flex flex-column justify-content-center align-items-center mt-4" *transloco="let t; prefix: 'statistics'">
   <h1>{{ t('statistics') }}</h1>
 
   <div class="container p-4">
@@ -21,20 +21,20 @@
       </div>
     </form>
     @if (rangeBehavior|async; as range) {
-      <div class="row row-cols-1 g-4 mt-4">
-        @if (disciplineStatistics$ | async; as disciplines) {
-          <app-line-chart class="col" [title]="t('disciplines')"
-          [range]="range" [labels]="years" [statistics]="disciplines"></app-line-chart>
-        }
-        @if (clanStatistics$ | async; as clans) {
-          <app-line-chart class="col" [title]="t('clans')" [range]="range"
-          [labels]="years" [statistics]="clans"></app-line-chart>
-        }
-        @if (tagStatistics$ | async; as tags) {
-          <app-line-chart class="col" [title]="t('playstyle')" [range]="range"
-          [labels]="years" [statistics]="tags"></app-line-chart>
-        }
-      </div>
+    <div class="row row-cols-1 g-4 mt-4">
+      @if (disciplineStatistics$ | async; as disciplines) {
+      <app-line-chart class="col" [title]="t('disciplines')" [range]="range" [labels]="years"
+        [statistics]="disciplines"></app-line-chart>
+      }
+      @if (clanStatistics$ | async; as clans) {
+      <app-line-chart class="col" [title]="t('clans')" [range]="range" [labels]="years"
+        [statistics]="clans"></app-line-chart>
+      }
+      @if (tagStatistics$ | async; as tags) {
+      <app-line-chart class="col" [title]="t('playstyle')" [range]="range" [labels]="years"
+        [statistics]="tags"></app-line-chart>
+      }
+    </div>
     }
   </div>
 
@@ -46,18 +46,18 @@
       </label>
       <select class="form-select" id="yearSelect" aria-labelledby="yearSelect" formControlName="year">
         @for (year of years; track year) {
-          <option value="{{ year }}">{{ year }}</option>
+        <option value="{{ year }}">{{ year }}</option>
         }
       </select>
     </div>
   </form>
   <div class="container p-4">
     @if (statistics$ | async; as statistics) {
-      <div class="row row-cols-1 row-cols-lg-2 g-4">
-        <app-bar-chart class="col" [title]="t('disciplines')" [labels]="disciplines"
+    <div class="row row-cols-1 row-cols-lg-2 g-4">
+      <app-bar-chart class="col" [title]="t('disciplines')" [labels]="disciplines"
         [statistics]="statistics.disciplines"></app-bar-chart>
-        <app-bar-chart class="col" [title]="t('clans')" [labels]="clans" [statistics]="statistics.clans"></app-bar-chart>
-        <app-radar-chart class="col" [title]="t('playstyle')" [statistics]="statistics.tags"></app-radar-chart>
-      </div>
+      <app-bar-chart class="col" [title]="t('clans')" [labels]="clans" [statistics]="statistics.clans"></app-bar-chart>
+      <app-radar-chart class="col" [title]="t('playstyle')" [statistics]="statistics.tags"></app-radar-chart>
+    </div>
     }
   </div>
