--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0" *transloco="let t; read: 'header'">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0" *transloco="let t; prefix: 'header'">
   <div class="container-fluid">
     <a [routerLink]="'/'" class="navbar-brand">
       <img class="header-logo" width="60" height="60" [src]="logoPath" alt="logo" />
