--- a/src/app/shared/components/theme-selector/theme-selector.component.html
+++ b/src/app/shared/components/theme-selector/theme-selector.component.html
@@ -1,10 +1,10 @@
 <div class="theme-selector nav-item nav-link" [ngClass]="theme" [attr.aria-label]="theme" (click)="toggleTheme()"
-  *transloco="let t; read: 'header'">
+  *transloco="let t; prefix: 'header'">
   @if (isMobile$ | async) {
-    <span class="theme-selector__text me-1">
-      {{ t('theme') }}
-    </span>
+  <span class="theme-selector__text me-1">
+    {{ t('theme') }}
+  </span>
   }
   <i class="bi bi-fs-1_2x fw-bold theme-selector__icon"
-  [ngClass]="theme === Theme.Dark ? 'bi-sun-fill' : 'bi-moon-fill'"></i>
+    [ngClass]="theme === Theme.Dark ? 'bi-sun-fill' : 'bi-moon-fill'"></i>
 </div>
